Fixed bug with overflow on line one

--- a/style.css
+++ b/style.css
@@ -74,7 +74,8 @@ body{
     min-height: 40px;
     align-self: flex-end;
     text-align: center;
-    max-width: 320px
+    max-width: 320px;
+    word-wrap: break-word;
     
 }
 
